[gd_scene load_steps=10 format=3 uid="uid://cj416ik5s7yh"]

[ext_resource type="Script" uid="uid://00r5i1gcpm4e" path="res://HUD/main_hud.gd" id="1_usjov"]
[ext_resource type="Texture2D" uid="uid://7rypu7brpq7p" path="res://Assets/Screenshot 2025-02-27 at 06-06-37 Sousou no Frieren Anime Characters Wallpaper 4K HD PC #6031n.png" id="2_4pyi2"]
[ext_resource type="FontFile" uid="uid://dhyxl5k67jfqi" path="res://Assets/Fonts/Xolonium-Regular.ttf" id="3_uvduc"]
[ext_resource type="Script" uid="uid://bkt51lunhae5a" path="res://HUD/controls.gd" id="4_usjov"]
[ext_resource type="Theme" uid="uid://b5ftakjqy7us6" path="res://Themes/main_menu.tres" id="5_hmbub"]
[ext_resource type="Texture2D" uid="uid://4mdodec6c8kn" path="res://Assets/animated_items_outline.png" id="6_rqgaw"]

[sub_resource type="Theme" id="Theme_8a38i"]
default_font = ExtResource("3_uvduc")
default_font_size = 30

[sub_resource type="AtlasTexture" id="AtlasTexture_mgtof"]
atlas = ExtResource("6_rqgaw")
region = Rect2(5, 5, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sa2t"]
atlas = ExtResource("6_rqgaw")
region = Rect2(5, 101, 22, 22)

[node name="MainHud" type="CanvasLayer"]
script = ExtResource("1_usjov")

[node name="Graphics" type="Node" parent="."]

[node name="TitleBackground" type="TextureRect" parent="Graphics"]
modulate = Color(0.142858, 0.142858, 0.142858, 1)
texture_filter = 1
texture_repeat = 2
offset_left = 880.0
offset_top = -320.0
offset_right = 4720.0
offset_bottom = 1760.0
rotation = 1.57079
scale = Vector2(0.525143, 0.525143)
texture = ExtResource("2_4pyi2")

[node name="Message" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 200.0
offset_right = 136.0
offset_bottom = 261.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_uvduc")
theme_override_font_sizes/font_size = 50
text = "BREAK BRICKS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="." groups=["title_ui"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 804.0
offset_top = -597.0
offset_right = 1004.0
offset_bottom = -537.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_uvduc")
theme_override_font_sizes/font_size = 40
text = "START"

[node name="ScoreLabel" type="Label" parent="."]
visible = false
offset_left = 51.0
offset_top = 44.0
offset_right = 91.0
offset_bottom = 81.0
theme_override_fonts/font = ExtResource("3_uvduc")
theme_override_font_sizes/font_size = 30
text = "0
"
vertical_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ControlSwitch" type="Button" parent="." groups=["title_ui"]]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 108.0
grow_vertical = 0
text = "MOUSE MODE"

[node name="GamepadControls" type="Label" parent="." groups=["title_ui"]]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -274.0
offset_top = -75.0
grow_horizontal = 0
grow_vertical = 0
text = "GAMEPAD CONTROLS
Start Button: Toggle Control
\"A\" Button: Start Game/Launch Ball"
horizontal_alignment = 2

[node name="MusicButton" type="CheckButton" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.0
offset_bottom = 24.0
grow_horizontal = 0
button_pressed = true
text = "Music"

[node name="Controls" type="Control" parent="." groups=["title_ui"]]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_usjov")

[node name="MainMenu" type="ItemList" parent="Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -97.5
offset_right = 174.0
offset_bottom = 97.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_hmbub")
allow_search = false
auto_width = true
auto_height = true
item_count = 4
same_column_width = true
icon_mode = 0
item_0/text = "Random Level"
item_1/text = "Level Select"
item_2/text = "Settings"

[node name="LevelSelect" type="ItemList" parent="Controls"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = -73.0
offset_right = 88.5
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8a38i")
allow_rmb_select = true
allow_search = false
auto_width = true
auto_height = true
wraparound_items = false
item_count = 3
same_column_width = true
icon_mode = 0
item_0/text = "Level 1"
item_0/icon = SubResource("AtlasTexture_mgtof")
item_1/text = "Test Level"
item_1/icon = SubResource("AtlasTexture_0sa2t")
item_2/text = "Back"

[node name="SettingsMenu" type="ItemList" parent="Controls"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="ControlSwitch" to="." method="_on_control_switch_pressed"]
[connection signal="toggled" from="MusicButton" to="." method="_on_music_button_toggled"]
[connection signal="level_selected" from="Controls" to="." method="_on_controls_level_selected"]
[connection signal="item_clicked" from="Controls/MainMenu" to="Controls" method="_on_main_menu_item_clicked"]
[connection signal="item_clicked" from="Controls/LevelSelect" to="Controls" method="_on_level_select_item_clicked"]
